refactor: Java 표준 지키도록 수정
- 함수네이밍이 CamelCase를 따르도록 ToDoaminModel->toDomainModel로 수정
- 읽기전용 list를 Collector.toList -> toList로 수정